# agency

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py  tmp.py
agency/: agency.py  agent.py  browse.py  embedding.py  keys.py  minion.py  minions.py  model.py  router.py  schema.py  tmp.py  tool.py  toolbox.py  ui.py  utils.py
agency/minions/: __init__.py
agency/models/: __init__.py  llm.py  model.py  openapi.py  openrouter.py  router.py
agency/models/tests/: test_openrouter.py
agency/tests/: test_agency.py  test_schema.py
agency/tools/: __init__.py  annotations.py  browse.py  code.py  docstore.py  feedback.py  files.py  html.py  logstore.py  lsp.py  notebook.py  recipes.py  search.py  tools.py
recipes/: browse.md  crawl.md  search.md
research/: assistant.py
research/notebook/: NeoRiemannian.md  NeoRiemannianRelations.md  pizza-cutter.md  pizza_cutter_history.md
research/recipes/: notes.md
research/src/: foo.py  test.py
world/: builder.py
world/knowledge/: Aelstrom.md  Aelvath.md  Aelvyr.md  Bahasalani.md  Flowsong.md  Kahuanui.md  Languages.md  Nusantara.md  Riverfolk Territory.md  Riverfolk.md  Sha'ar.md  Sha'ri Territory.md  Sha'ri.md
world/recipes/: aliases.md  cultures.md  existing.md  goals.md  imagine.md  updates.md
