[tool.poetry]
name = "agency"
version = "0.1.0"
description = ""
authors = ["Joel Webber <jgw@pobox.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
ipython = "^8.28.0"
pytest = "^8.3.3"
black = "^24.10.0"
isort = "^5.13.2"
chromadb = "^0.5.20"
playwright = "^1.49.1"
pytz = "^2024.2"
unstructured = "^0.16.11"
sentence-transformers = "^3.3.1"
minify-html = "^0.15.0"
jinja2 = "^3.1.3"
debugpy = "^1.8.11"
tree-sitter = "^0.24.0"
tree-sitter-languages = "^1.10.2"
grep-ast = "^0.4.1"
tree-sitter-python = "^0.23.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
